assets/css/style.css
@font-face {
    font-family: "Peace";
    src: url("../fonts/hvd_peace.woff") format("woff"),
        url("../fonts/hvd_peace.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Crass";
    src: url("../fonts/crass.woff2") format("woff2"),
        url("../fonts/crass.woff") format("woff"),
        url("../fonts/crass.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
}

body {
    font-family: Peace;
    display: block;
    margin: 8px;
}

h1 {
    font-size: 3rem;
}

p {
      letter-spacing: 3px;
      padding: .15rem;
}

h2 {
    display: block;
    font-size: 1.5em;
    margin-top: 0.83em;
    margin-bottom: 0.83em;
    font-weight: bold;
}

.bigger-p-text {
    font-size: 1.3rem;
    margin-bottom: 1rem;
}

.container {
    position: relative;
    width:900px;
    height:600px;
    z-index: -1;
    margin: 0 auto;
    padding:0;
}

.crass-border {
    background-color: black;
    color: white;
    font-family: Crass;
    letter-spacing: 1rem;
    position: absolute;
    text-align: center;
}

.crass-top {
    width: 100%;
    word-spacing: 2rem;
    top:0;
    box-sizing: border-box;
    margin: 0;
}

.crass-bottom {
    width: 100%;
    word-spacing: 3rem;
    bottom:0;
    box-sizing: border-box;
    margin: 0;
}

.crass-right {
    width: 600px;
    word-spacing: 2rem;
    bottom:44.7%;
    right:-30%;
    transform: rotate(90deg);
    box-sizing: border-box;
    margin: 0;
    padding-left:10px;
}

.crass-left {
    width: 600px;
    word-spacing: 1.5rem;
    bottom:44.7%;
    left:-30%;
    transform: rotate(-90deg);
    box-sizing: border-box;
    margin: 0;
    padding-left: 8px;
    z-index: 2;
}

.crass-center {
    margin: 0 auto;
    padding-top: 100px;
    width: 60%;
    text-align: center;
}

#small-view {
    display: none;
}

/* up to 400px */
@media screen and (max-width: 400px) {
    body {
        margin: 0;
    }
    img {
        width: 150px;
    }
    
    h1 {
        font-size: 2rem;
    }

    h2 {
        font-size: .8rem;
        margin-top: 0.4em;
        margin-bottom: 0;
    }
    
    .container {
        width: 100%;
        height: 550px;
        margin-top: 10px;
    }

    .crass-border {
        letter-spacing: .7rem;
        position: static;
        word-spacing: 1rem;
        line-height: 1.9;
    }
    
    .crass-right {
        width: 100%;
        transform: rotate(0);
    }
    
    .crass-left {
        width: 100%;
        transform: rotate(0);
    }
    .crass-bottom {
        display: none;
    }
    
    .crass-center {
        padding-top: 20px;
        width: 90%;
    }

    #small-view {
        display: inline;
    }
}

/* 401px to 640px */
@media screen and (min-width: 401px) and (max-width: 640px) {
    img {
        width: 150px;
    }
    
    h1 {
        font-size: 2rem;
    }

    h2 {
        font-size: 1.1rem;
        margin-top: 0.4em;
        margin-bottom: 0;
    }
    
    .container {
        width: 380px;
        height: auto;
        min-height: 550px;
        margin-top: 10px;
        border: 1px solid black;
    }

    .crass-border {
        letter-spacing: .8rem;
        position: static;
        word-spacing: 1rem;
        line-height: 1.8;
    }
    
    .crass-top {
       letter-spacing: 1rem;
  
    }
    
    .crass-right {
        width: 100%;
        transform: rotate(0);
    }
    
    .crass-left {
        width: 100%;
        transform: rotate(0);
    }
    .crass-bottom {
        display: none;
    }
    
    .crass-center {
        padding-top: 20px;
        width: 90%;
    }
}

/* 641px to 768px */
@media screen and (min-width: 641px) and (max-width: 768px) {
    h2 {
        font-size: 1.1rem;
    }
    
    .container {
        width: 600px;
        height: 550px;
        margin-top: 20px;
    }

    .crass-border {
        letter-spacing: .8rem;
    }
    
    .crass-top {
        word-spacing: .5rem;
        padding-left: 17px;
    }
    
    .crass-right {
        width: 549px;
        bottom:45.8%;
        right:-41.9%;
        word-spacing: 3.5rem;
        letter-spacing: .9rem;
    }
    
    .crass-left {
        width: 549px;
        bottom:45.7%;
        left:-41.9%;
        word-spacing: 2.5rem;
    }
    
    .crass-center {
        padding-top: 80px;
        width: 65%;
    }
    
}

/* 769px to 950px */
@media screen and (min-width: 769px) and (max-width: 950px) {

h2 {
    font-size: 1.3rem;
}

.container {
    width: 740px;
    height: 550px;
    margin-top: 20px;
}

.crass-top {
    word-spacing: .7rem;
    padding-left: 17px;
}

.crass-right {
    width: 549px;
    bottom:45%;
    right:-33.5%;
}

.crass-left {
    width: 549px;
    bottom:45.05%;
    left:-33.4%;
}

.crass-center {
    padding-top: 80px;
    width: 65%;
}


} 

